--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -11,10 +11,12 @@
   "version": "0.1.25",
   "main": "lib/hig.js",
   "files": [
-    "lib/hig.css"
+    "lib/*"
   ],
   "scripts": {
+    "babel": "babel --ignore tests,skeletons,languages --out-dir lib src",
     "build-icons": "node src/basics/icons/build/build.js",
+    "clean": "rimraf lib",
     "deploy": "yarn lib && surge .",
     "dev-server": "webpack-dev-server --open --config webpack.dev.js",
     "gemini": "concurrently 'http-server' 'gemini test dev/gemini/*' --kill-others",
@@ -22,7 +24,7 @@
     "gemini-report": "concurrently 'http-server' 'gemini test dev/gemini/* --reporter html --reporter flat' --kill-others",
     "gemini-update": "concurrently 'http-server' 'gemini update dev/gemini/*' --kill-others",
     "generate-index": "node ./dev/generate-index.js",
-    "lib": "webpack -p --config webpack.prod.js",
+    "lib": "yarn clean && yarn babel && webpack -p --config webpack.prod.js",
     "lint": "eslint --ext .jsx,.js dev src",
     "lint-fix": "eslint --ext .jsx,.js dev src --fix",
     "test": "yarn gemini",
@@ -32,6 +34,7 @@
     "hig-interface": "^0.1.18"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -60,6 +63,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "plop": "^1.7.4",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
     "svg-url-loader": "^2.3.0",
